@@ -1,4 +1,6 @@
 DIST net-sftp-1.1.0.gem 43520 RMD160 499f2a4b9f835edcff9cc65f9c5bde8a5934fdcb SHA1 05542082c57092607df6fccff6985ec9ca371431 SHA256 f72df9c27ceaa8c96708767ff420e790a0ebd4086a26f66b61399f82db19f37a
+DIST net-sftp-1.1.1.gem 43520 RMD160 1537088da32b84ff87517a82082b876d9362631b SHA1 4f04298dcea1b01cf86d47574cc65c2159a76716 SHA256 6ba01ee5fb19bd49c12ab4d090d56d17647376ec54ae160af26180a814d211ab
 EBUILD net-sftp-1.1.0.ebuild 546 RMD160 31cf7101f34f0f650a709b43b60282f66dcb2dc0 SHA1 d6f228724e978764ebe197b65faf2bb1f56c40b9 SHA256 fda49fdfc7f415910a25f9b4d54bc0c6906f3955640d688fe9ce6de5bc1c5355
-MISC ChangeLog 2081 RMD160 1fb93fcb8f2ccc5a52c673c4c2f1d78db098a9df SHA1 71d39e7c12f3c0542da74a5275e75b9df9110a22 SHA256 8fe167e1d72f7762594247b9ee6011b118ac2fc3fe82addcca98e15e4930378f
+EBUILD net-sftp-1.1.1.ebuild 472 RMD160 509ac96e9418e06ae2741ab8913f6208770fef39 SHA1 beb8ce8de146189f414b1f229f3ab444fc28f21d SHA256 d0c546ca8cec61977dd4646c2ffafae3d3f9c1efbb9b24427db5a1ed9b284c70
+MISC ChangeLog 2279 RMD160 57707ceec336dcb40c2d10048b9e99280586d663 SHA1 820d67f84d83f7c692c4e78d6af3cb74cab947c6 SHA256 f0745a563511cbb9fb5db529fd0b876e39af756eca241f254996ffd009abe1c6
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
