@@ -1,0 +1,17 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/net-sftp/net-sftp-1.1.1.ebuild,v 1.1 2008/05/11 12:48:03 graaff Exp $
+
+EAPI="prefix"
+
+inherit gems
+
+DESCRIPTION="SFTP in pure Ruby"
+HOMEPAGE="http://net-ssh.rubyforge.org/"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+IUSE=""
+
+RDEPEND="=dev-ruby/net-ssh-1*"
